--- a/index.html
+++ b/index.html
@@ -94,7 +94,6 @@
             buildCalendar();
         }
         </script>
-        <body>
         <table id="calendar" align="center">
                 <tr>
                     <td align="center"><label onclick="prevCalendar()"> ◀ </label></td>
@@ -112,6 +111,7 @@
                 </tr>
                 <script type="text/javascript">buildCalendar();</script>
             </table>
+        </body>
 
 <script src="app.js"></script>
 
